@@ -8,6 +8,7 @@ import com.csy.springbootauthbe.admin.mapper.AdminMapper;
 import com.csy.springbootauthbe.admin.repository.AdminRepository;
 import com.csy.springbootauthbe.booking.dto.BookingDTO;
 import com.csy.springbootauthbe.booking.service.BookingServiceImpl;
+import com.csy.springbootauthbe.student.dto.StudentDTO;
 import com.csy.springbootauthbe.student.entity.Student;
 import com.csy.springbootauthbe.student.repository.StudentRepository;
 import com.csy.springbootauthbe.tutor.dto.TutorDTO;
@@ -17,15 +18,12 @@ import com.csy.springbootauthbe.user.entity.AccountStatus;
 import com.csy.springbootauthbe.user.entity.Role;
 import com.csy.springbootauthbe.user.entity.User;
 import com.csy.springbootauthbe.user.repository.UserRepository;
-import com.csy.springbootauthbe.user.utils.UserResponse;
 import com.csy.springbootauthbe.wallet.service.WalletService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.mockito.*;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -41,273 +39,232 @@ class AdminServiceImplTest {
     @Mock private WalletService walletService;
     @Mock private BookingServiceImpl bookingService;
 
-    @InjectMocks
-    private AdminServiceImpl adminService;
+    @InjectMocks private AdminServiceImpl service;
 
+    private Admin admin;
     private User adminUser;
-    private Admin adminProfile;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        adminUser = new User();
-        adminUser.setId("A1");
-        adminUser.setRole(Role.ADMIN);
-        adminUser.setStatus(AccountStatus.ACTIVE);
-
-        adminProfile = new Admin();
-        adminProfile.setUserId("A1");
-        adminProfile.setPermissions(List.of(Permissions.VIEW_STUDENTS, Permissions.VIEW_TUTORS, Permissions.VIEW_ADMIN, Permissions.DELETE_BOOKING));
+        adminUser = new User("A1", "Admin", "User", "admin@example.com", "pw",
+            AccountStatus.ACTIVE, Role.ADMIN);
+        admin = new Admin();
+        admin.setUserId("A1");
+        admin.setPermissions(List.of(Permissions.VIEW_STUDENTS, Permissions.VIEW_TUTORS, Permissions.VIEW_ADMIN));
     }
 
-    // ------------------ Helpers ------------------
-
-    @Test
-    void testCheckAdminWithPermissionThrowsIfNotAdmin() {
-        User notAdmin = new User();
-        notAdmin.setId("U1");
-        notAdmin.setRole(Role.STUDENT);
-
-        when(userRepository.findById("U1")).thenReturn(Optional.of(notAdmin));
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-            () -> invokeCheckAdminWithPermission("U1", Permissions.VIEW_STUDENTS));
-        assertTrue(ex.getMessage().contains("Not an admin"));
-    }
-
-    @Test
-    void testCheckAdminWithPermissionThrowsIfMissingPermission() {
-        adminProfile.setPermissions(List.of(Permissions.VIEW_TUTORS)); // Missing required
+    // --------------- Helper ----------------
+    private void mockAdminPermission(Permissions... perms) {
+        admin.setPermissions(Arrays.asList(perms));
         when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
+        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(admin));
+    }
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-            () -> invokeCheckAdminWithPermission("A1", Permissions.VIEW_STUDENTS));
-        assertTrue(ex.getMessage().contains("Unauthorized"));
+    // --------------- Student Management ----------------
+    @Test
+    void testViewStudents_ReturnsResponses() {
+        mockAdminPermission(Permissions.VIEW_STUDENTS);
+
+        User s1 = new User("S1", "John", "Doe", "john@example.com", "pw",
+            AccountStatus.ACTIVE, Role.STUDENT);
+        Student st = new Student();
+        st.setUserId("S1");
+        st.setStudentNumber("SN001");
+
+        when(userRepository.findAllByRole(Role.STUDENT)).thenReturn(List.of(s1));
+        when(studentRepository.findByUserId("S1")).thenReturn(Optional.of(st));
+
+        var result = service.viewStudents("A1");
+        assertEquals(1, result.size());
+        assertTrue(result.get(0).getName().contains("John"));
     }
 
     @Test
-    void testGetUserOrThrow() {
-        User student = new User();
-        student.setId("S1");
-        student.setRole(Role.STUDENT);
-        when(userRepository.findById("S1")).thenReturn(Optional.of(student));
+    void testViewStudentDetail_ReturnsDTO() {
+        User s1 = new User("S1", "Jane", "Doe", "jane@example.com", "pw",
+            AccountStatus.ACTIVE, Role.STUDENT);
+        when(userRepository.findById("S1")).thenReturn(Optional.of(s1));
+        Student st = new Student();
+        st.setUserId("S1");
+        st.setGradeLevel("Grade 5");
+        when(studentRepository.findByUserId("S1")).thenReturn(Optional.of(st));
 
-        User result = invokeGetUserOrThrow("S1", Role.STUDENT);
-        assertEquals(student, result);
+        Optional<StudentDTO> result = service.viewStudentDetail("S1");
+        assertTrue(result.isPresent());
+        assertEquals("Jane", result.get().getFirstName());
     }
 
     @Test
-    void testGetUserOrThrowThrowsIfRoleMismatch() {
-        User tutor = new User();
-        tutor.setId("T1");
-        tutor.setRole(Role.TUTOR);
-        when(userRepository.findById("T1")).thenReturn(Optional.of(tutor));
+    void testSuspendStudent_SetsStatusSuspended() {
+        mockAdminPermission(Permissions.SUSPEND_STUDENT);
+        User s1 = new User("S1", "A", "B", "e@x.com", "pw",
+            AccountStatus.ACTIVE, Role.STUDENT);
+        when(userRepository.findById("S1")).thenReturn(Optional.of(s1));
 
-        assertThrows(RuntimeException.class,
-            () -> invokeGetUserOrThrow("T1", Role.STUDENT));
-    }
-
-    // ------------------ Student Management ------------------
-
-    @Test
-    void testViewStudents() {
-        User studentUser = new User();
-        studentUser.setId("S1");
-        studentUser.setFirstname("Alice");
-        studentUser.setLastname("Tan");
-        studentUser.setEmail("alice@x.com");
-        studentUser.setRole(Role.STUDENT);
-        studentUser.setStatus(AccountStatus.ACTIVE);
-
-        Student student = new Student();
-        student.setStudentNumber("SN001");
-        student.setGradeLevel("P5");
-
-        when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
-        when(userRepository.findAllByRole(Role.STUDENT)).thenReturn(List.of(studentUser));
-        when(studentRepository.findByUserId("S1")).thenReturn(Optional.of(student));
-
-        List<UserResponse> responses = adminService.viewStudents("A1");
-
-        assertEquals(1, responses.size());
-        assertEquals("Alice Tan", responses.get(0).getName());
-        assertEquals(Role.STUDENT, responses.get(0).getRole());
+        String id = service.suspendStudent("A1", "S1");
+        assertEquals("S1", id);
+        assertEquals(AccountStatus.SUSPENDED, s1.getStatus());
     }
 
     @Test
-    void testSuspendStudent() {
-        User student = new User();
-        student.setId("S1");
-        student.setRole(Role.STUDENT);
+    void testDeleteStudent_SetsStatusDeleted() {
+        mockAdminPermission(Permissions.DELETE_STUDENT);
+        User s1 = new User("S1", "A", "B", "e@x.com", "pw",
+            AccountStatus.ACTIVE, Role.STUDENT);
+        when(userRepository.findById("S1")).thenReturn(Optional.of(s1));
 
-        when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
-        when(userRepository.findById("S1")).thenReturn(Optional.of(student));
-
-        String result = adminService.suspendStudent("A1", "S1");
-        assertEquals("S1", result);
-        verify(userRepository).save(student);
+        service.deleteStudent("A1", "S1");
+        assertEquals(AccountStatus.DELETED, s1.getStatus());
     }
 
+    // --------------- Tutor Management ----------------
     @Test
-    void testActivateStudent() {
-        User student = new User();
-        student.setId("S1");
-        student.setRole(Role.STUDENT);
-
-        when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
-        when(userRepository.findById("S1")).thenReturn(Optional.of(student));
-
-        String result = adminService.activateStudent("A1", "S1");
-        assertEquals("S1", result);
-        verify(userRepository).save(student);
-    }
-
-    @Test
-    void testDeleteStudent() {
-        User student = new User();
-        student.setId("S1");
-        student.setRole(Role.STUDENT);
-
-        adminProfile.setPermissions(List.of(Permissions.DELETE_STUDENT));
-        when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
-        when(userRepository.findById("S1")).thenReturn(Optional.of(student));
-
-        String result = adminService.deleteStudent("A1", "S1");
-        assertEquals("S1", result);
-        verify(userRepository).save(student);
-    }
-
-    // ------------------ Tutor Management ------------------
-
-    @Test
-    void testViewTutors() {
-        User tutorUser = new User();
-        tutorUser.setId("T1");
-        tutorUser.setFirstname("Bob");
-        tutorUser.setLastname("Lim");
-        tutorUser.setEmail("bob@x.com");
-        tutorUser.setRole(Role.TUTOR);
-        tutorUser.setStatus(AccountStatus.ACTIVE);
-
+    void testViewTutors_ReturnsMappedTutors() {
+        mockAdminPermission(Permissions.VIEW_TUTORS);
+        User t1 = new User("T1", "T", "X", "t@example.com", "pw",
+            AccountStatus.ACTIVE, Role.TUTOR);
         Tutor tutor = new Tutor();
+        tutor.setUserId("T1");
         tutor.setSubject("Math");
-        tutor.setHourlyRate(40.0);
 
-        when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
-        when(userRepository.findAllByRole(Role.TUTOR)).thenReturn(List.of(tutorUser));
+        when(userRepository.findAllByRole(Role.TUTOR)).thenReturn(List.of(t1));
         when(tutorRepository.findByUserId("T1")).thenReturn(Optional.of(tutor));
 
-        List<TutorDTO> tutors = adminService.viewTutors("A1");
-        assertEquals(1, tutors.size());
-        assertEquals("Math", tutors.get(0).getSubject());
+        var result = service.viewTutors("A1");
+        assertEquals(1, result.size());
+        assertEquals("Math", result.get(0).getSubject());
     }
 
     @Test
-    void testApproveTutorThrowsIfTutorNotFound() {
-        when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
-        when(userRepository.findById("T1")).thenReturn(Optional.of(new User()));
-        when(tutorRepository.findByUserId("T1")).thenReturn(Optional.empty());
+    void testApproveTutor_UpdatesTutorAndClearsStagedProfile() {
+        mockAdminPermission(Permissions.APPROVE_TUTOR);
+        User tutorUser = new User("T1", "T", "X", "t@example.com", "pw",
+            AccountStatus.UNVERIFIED, Role.TUTOR);
+        Tutor tutor = new Tutor();
+        tutor.setUserId("T1");
+        tutor.setStagedProfile(null);
 
-        assertThrows(UsernameNotFoundException.class, () -> adminService.approveTutor("A1", "T1"));
+        when(userRepository.findById("T1")).thenReturn(Optional.of(tutorUser));
+        when(tutorRepository.findByUserId("T1")).thenReturn(Optional.of(tutor));
+
+        service.approveTutor("A1", "T1");
+
+        verify(userRepository).save(tutorUser);
+        verify(tutorRepository).save(tutor);
+        assertNull(tutor.getRejectedReason());
     }
 
-    // ------------------ Admin Management ------------------
-
     @Test
-    void testGetAdminByUserId() {
-        User user = new User();
-        user.setId("U1");
-        user.setFirstname("Admin");
-        user.setLastname("User");
-        user.setEmail("admin@x.com");
-        user.setRole(Role.ADMIN);
-        user.setStatus(AccountStatus.ACTIVE);
+    void testRejectTutor_SetsRejectedReason() {
+        mockAdminPermission(Permissions.REJECT_TUTOR);
+        User tutorUser = new User("T1", "T", "X", "t@example.com", "pw",
+            AccountStatus.ACTIVE, Role.TUTOR);
+        Tutor tutor = new Tutor();
+        tutor.setUserId("T1");
+        tutor.setPreviousStatus(AccountStatus.ACTIVE);
 
-        Admin admin = new Admin();
-        admin.setUserId("U1");
-        admin.setPermissions(List.of(Permissions.VIEW_TUTORS));
+        when(userRepository.findById("T1")).thenReturn(Optional.of(tutorUser));
+        when(tutorRepository.findByUserId("T1")).thenReturn(Optional.of(tutor));
 
-        when(userRepository.findById("U1")).thenReturn(Optional.of(user));
-        when(adminRepository.findByUserId("U1")).thenReturn(Optional.of(admin));
+        service.rejectTutor("A1", "T1", "bad profile");
+        assertEquals("bad profile", tutor.getRejectedReason());
+    }
 
-        Optional<AdminDTO> result = adminService.getAdminByUserId("U1");
+    // --------------- Admin Management ----------------
+    @Test
+    void testGetAdminByUserId_ReturnsDTO() {
+        User user = new User("A2", "A", "B", "a@b.com", "pw",
+            AccountStatus.ACTIVE, Role.ADMIN);
+        Admin ad = new Admin("id", "A2", List.of(Permissions.VIEW_ADMIN));
+        when(userRepository.findById("A2")).thenReturn(Optional.of(user));
+        when(adminRepository.findByUserId("A2")).thenReturn(Optional.of(ad));
+
+        Optional<AdminDTO> result = service.getAdminByUserId("A2");
         assertTrue(result.isPresent());
-        assertEquals("U1", result.get().getUserId());
+        assertEquals("A2", result.get().getUserId());
     }
 
     @Test
-    void testCreateAdmin() {
-        AdminDTO dto = new AdminDTO();
-        Admin admin = new Admin();
-        when(adminMapper.toEntity(dto)).thenReturn(admin);
-        when(adminRepository.save(admin)).thenReturn(admin);
-        when(adminMapper.toDTO(admin)).thenReturn(new AdminDTO());
+    void testCreateAdmin_CallsMapperAndRepository() {
+        AdminDTO dto = AdminDTO.builder().id("x").build();
+        Admin entity = new Admin();
+        when(adminMapper.toEntity(dto)).thenReturn(entity);
+        when(adminRepository.save(entity)).thenReturn(entity);
 
-        adminService.createAdmin(dto);
-        verify(adminMapper).toEntity(dto);
-        verify(adminRepository).save(admin);
+        service.createAdmin(dto);
+        verify(adminMapper).toDTO(entity);
     }
 
     @Test
-    void testDeleteBooking() {
-        BookingDTO booking = new BookingDTO();
-        when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
-        when(bookingService.deleteBooking("B1")).thenReturn(booking);
+    void testEditAdminRoles_Success() {
+        mockAdminPermission(Permissions.EDIT_ADMIN_ROLES);
+        Admin target = new Admin("id", "A2", new ArrayList<>());
+        when(adminRepository.findByUserId("A2")).thenReturn(Optional.of(target));
 
-        BookingDTO result = adminService.deleteBooking("A1", "B1");
-        assertEquals(booking, result);
+        service.editAdminRoles("A1", "A2", List.of(Permissions.VIEW_TUTORS));
+        assertTrue(target.getPermissions().contains(Permissions.VIEW_TUTORS));
     }
 
+    // --------------- Dashboard ----------------
     @Test
-    void testGetDashboardSummary() {
-        when(userRepository.findById("A1")).thenReturn(Optional.of(adminUser));
-        when(adminRepository.findByUserId("A1")).thenReturn(Optional.of(adminProfile));
+    void testGetDashboardSummary_CalculatesMetrics() {
+        mockAdminPermission(Permissions.VIEW_TUTORS, Permissions.VIEW_STUDENTS, Permissions.VIEW_ADMIN);
 
-        when(userRepository.findAll()).thenReturn(List.of(adminUser));
-        when(userRepository.findAllByRole(Role.TUTOR)).thenReturn(List.of(adminUser));
-        when(userRepository.findAllByRole(Role.STUDENT)).thenReturn(List.of(adminUser));
-        when(userRepository.findAllByRole(Role.ADMIN)).thenReturn(List.of(adminUser));
+        User u1 = new User("1", "N", "N", "e@x.com", "pw",
+            AccountStatus.ACTIVE, Role.TUTOR);
+        when(userRepository.findAll()).thenReturn(List.of(u1));
         when(tutorRepository.count()).thenReturn(1L);
         when(studentRepository.count()).thenReturn(1L);
         when(adminRepository.count()).thenReturn(1L);
-        when(walletService.getTransactionMetrics()).thenReturn(new AdminDashboardDTO.TransactionMetrics());
+        when(userRepository.findAllByRole(any())).thenReturn(List.of(u1));
 
-        AdminDashboardDTO dashboard = adminService.getDashboardSummary("A1");
+        // Properly mock transaction metrics
+        AdminDashboardDTO.TransactionMetrics metrics = AdminDashboardDTO.TransactionMetrics.builder()
+            .totalEarnings(100.0)
+            .commissionCollected(10.0)
+            .highestTransaction(new AdminDashboardDTO.TransactionSummary("desc", 100.0))
+            .monthlyEarnings(List.of(new AdminDashboardDTO.MonthlyEarnings("Jan", 100.0)))
+            .build();
+        when(walletService.getTransactionMetrics()).thenReturn(metrics);
 
-        assertNotNull(dashboard);
-        assertEquals(1, dashboard.getTotalTutors());
+        AdminDashboardDTO dto = service.getDashboardSummary("A1");
+
+        assertNotNull(dto);
+        assertEquals(100.0, dto.getTransactionMetrics().getTotalEarnings());
     }
 
-    // ------------------ Private Helper Invokers ------------------
 
-    private void invokeCheckAdminWithPermission(String userId, Permissions permission) {
-        try {
-            var method = AdminServiceImpl.class
-                .getDeclaredMethod("checkAdminWithPermission", String.class, Permissions[].class);
-            method.setAccessible(true);
-            method.invoke(adminService, userId, new Permissions[]{permission});
-        } catch (Exception e) {
-            if (e.getCause() instanceof RuntimeException re) throw re;
-        }
+    // --------------- Booking ----------------
+    @Test
+    void testDeleteBooking_DelegatesToBookingService() {
+        mockAdminPermission(Permissions.DELETE_BOOKING);
+        BookingDTO dto = BookingDTO.builder().id("B1").build();
+        when(bookingService.deleteBooking("B1")).thenReturn(dto);
+
+        BookingDTO result = service.deleteBooking("A1", "B1");
+        assertEquals("B1", result.getId());
     }
 
-    private User invokeGetUserOrThrow(String userId, Role role) {
-        try {
-            var method = AdminServiceImpl.class
-                .getDeclaredMethod("getUserOrThrow", String.class, Role.class);
-            method.setAccessible(true);
-            return (User) method.invoke(adminService, userId, role);
-        } catch (Exception e) {
-            if (e.getCause() instanceof RuntimeException re) throw re;
-            return null;
-        }
+    // --------------- Permission Checks ----------------
+    @Test
+    void testCheckAdminWithPermission_ThrowsIfMissingPermission() {
+        mockAdminPermission(Permissions.VIEW_STUDENTS);
+        admin.setPermissions(List.of(Permissions.VIEW_STUDENTS)); // missing required one
+
+        assertThrows(RuntimeException.class, () -> service.editAdminRoles("A1", "A2", List.of()));
+    }
+
+    @Test
+    void testGetUserOrThrow_ThrowsIfRoleMismatch() {
+        User u = new User("X", "F", "L", "e@x.com", "pw",
+            AccountStatus.ACTIVE, Role.STUDENT);
+        when(userRepository.findById("X")).thenReturn(Optional.of(u));
+
+        assertThrows(InvocationTargetException.class, () -> {
+            var m = AdminServiceImpl.class.getDeclaredMethod("getUserOrThrow", String.class, Role.class);
+            m.setAccessible(true);
+            m.invoke(service, "X", Role.TUTOR);
+        });
     }
 }
